Update .gitignore to include all targets

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 gale-source/gale/target
+gale-source/gale-ae/target/
+gale-source/gale-common/target
+gale-source/gale-conversion/target
+gale-source/gale-dm/target
+gale-source/gale-event/target
+gale-source/gale-geb/target
+gale-source/gale-tools/target
+gale-source/gale-um/target
